--- a/src/app/staff-and-infra/staff-and-infra.component.html
+++ b/src/app/staff-and-infra/staff-and-infra.component.html
@@ -100,13 +100,13 @@
 
                         <tr>
                             <td>5</td>
-                            <td>DNO. OF GIRLS TOILET</td>
+                            <td>NO. OF GIRLS TOILET</td>
                             <td>35</td>
                         </tr>
 
                         <tr>
                             <td>6</td>
-                            <td>DNO. OF BOYS TOILET</td>
+                            <td>NO. OF BOYS TOILET</td>
                             <td>35</td>
                         </tr>
 
