--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -90,6 +90,22 @@
                             </div>
                           </div>
                         </div>
+
+
+                        <div class="col">
+                            <div class="card m-2 mb-3" id="trcc">
+                                
+                                <img src="../../assets/principal.jpeg" alt="" class="img-fluid"  >
+                    
+                                <div class="card-body">
+            
+                                    <p>Mrs. Indumathy</p>
+                                    <p class="text-center">[ Principal ]</p>
+                                  
+                                    
+                                </div>
+                              </div>
+                            </div>
         
                 </div> 
         
