--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
           <a class="nav-link" routerLink="activities" routerLinkActive="active"><strong> Activities </strong></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="xx" routerLinkActive="active" ><strong> Gallery </strong></a>
+          <a class="nav-link" routerLink="gallery" routerLinkActive="active" ><strong> Gallery </strong></a>
         </li>
 
         <li class="nav-item dropdown">
