--- a/src/app/renewal-certificate/renewal-certificate.component.html
+++ b/src/app/renewal-certificate/renewal-certificate.component.html
@@ -1,1 +1,6 @@
-<p>renewal-certificate works!</p>
+<div class="container">
+
+    <embed src="../../assets/safety.jpeg" type="application/pdf" width="100%" height="700px">
+</div>
+
+
