--- a/src/app/safety-certificate/safety-certificate.component.html
+++ b/src/app/safety-certificate/safety-certificate.component.html
@@ -1,5 +1,5 @@
 <div class="container">
 
-    <embed src="../../assets/safety.jpeg" type="application/pdf" width="100%" height="700px">
+    <embed src="../../assets/Building Safety Certificate.pdf" type="application/pdf" width="100%" height="700px">
 </div>
 
