--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -37,12 +37,21 @@
         <div class="col-sm-2 text-white">
             <p>Useful Links</p>
             <div>
-            <a  style="text-decoration: none;" class="text-white d-block pt-2" (click)="onclickActivties()" routerLink="activities"><i class="fas fa-chevron-right"></i> Activities</a>
+            <!-- <a  style="text-decoration: none;" class="text-white d-block pt-2 bg-dark" (click)="onclickActivties()" routerLink="activities"><i class="fas fa-chevron-right"></i> Activities</a>
             <a  style="text-decoration: none;" class="text-white d-block pt-2"  routerLink="activities"><i class="fas fa-chevron-right"></i> Events</a>
             <a  style="text-decoration: none;" class="text-white d-block pt-2" (click)="onclickcontact()" routerLink="contactUs"><i class="fas fa-chevron-right"></i> Contact us</a>
             <a  style="text-decoration: none;" class="text-white d-block pt-2" (click)="onclickcontact()" routerLink="contactUs"><i class="fas fa-chevron-right"></i> Google Maps</a>
-            <a  style="text-decoration: none;" class="text-white d-block pt-2"  routerLink="activities"><i class="fas fa-chevron-right"></i> Terms and Conditions</a>
-            </div>
+            <a  style="text-decoration: none;" class="text-white d-block pt-2"  routerLink="activities"><i class="fas fa-chevron-right"></i> Terms and Conditions</a> -->
+              <ul>
+                <li>Activities</li>
+                <li>Events</li>
+                <li>Contact us</li>
+                <li>Google Maps</li>
+                <li>Terms and Conditions</li>
+              </ul>
+          
+          
+          </div>
         </div>
 
         <div class="col-sm-3 text-white">
