--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,7 +45,7 @@
     <h3 style="color: rgb(6, 68, 6);" class="pb-3">Why MOUNT BASIL HIGH SCHOOL ?</h3>
     <p class="mt-1">The association with MOUNT BASIL HIGH SCHOOL stretches beyond teaching & learning experience. It is a strongly knit family where every child is looked after with utmost care & affection. At MOUNT BASIL HIGH SCHOOL an opportunate environment has been established to faster holistic development of every child there are many reasons why MOUNT BASIL HIGH SCHOOL should be the preferred school for your child.</p>
 
-    <button class="btn btn-success mt-2 mb-4">Read more</button>
+    <button class="btn btn-success mt-2 mb-4" (click)="onclickreadmore()">Read more</button>
 
     <div style="background: rgb(239,237,240);background: linear-gradient(90deg, rgba(239,237,240,1) 0%, rgba(237,237,237,1) 0%, rgba(244,238,241,1) 100%);" class="pt-5 mt-3 pb-3 container">
     <h1 class="text-center" style="color: rgb(6, 68, 6);">OUR ACTIVITIES</h1>
@@ -94,7 +94,7 @@
 
     </div>
     
-    <button class="btn btn-success d-block text-center mx-auto  ">MORE</button>
+    <button class="btn btn-success d-block text-center mx-auto " (click)="onclickMore()">MORE</button>
 
     </div>
 
